--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,36 @@
 name: Build and Push Docker Image to Docker Hub
 
-on: push
+on: 
+  push:
+    branches:
+      - main
 jobs:
   push_to_registry:
-    name: push docker image to hub
+    name: Push Docker Image to Hub
     runs-on: ubuntu-latest
     steps:
-      - name: check repository
+      - name: Check out the repository
         uses: actions/checkout@v4
 
-      - name: login to docker registry
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: build and push docker image to registry
+      - name: Extract version number from GIT SHA
+        id: extract_sha
+        run: echo "BUILD_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: app/
           push: true
-          tags: safernandez666/app:latest
+          tags: safernandez666/app:latest, safernandez666/app:${{ env.BUILD_TAG }}
