--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image to Docker Hub New
 on: 
   push:
     branches:
-      - main
+      - master
 jobs:
   push_to_registry:
     name: Push Docker Image to Hub
