--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,7 @@
-name: Teleport
 on:
 push:
   branches:
-  - master
+  - main
 jobs:
 demo:
   permissions:
@@ -10,7 +9,7 @@ demo:
     # able to authenticate with the cluster.
     id-token: write
     contents: read
-
+  false
   name: gh-actions-example
   runs-on: ubuntu-latest
   steps:
