--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,7 @@ jobs:
           tags: safernandez666/app:latest, safernandez666/app:${{ env.BUILD_TAG }}
 
   update-newtag-in-helm-chart:
-    name: Update Tag on Helm Charts
-    needs: build  # Esto asegura que este trabajo depende de 'build'
+    name: Update Tag in Helm Chart
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -46,10 +45,13 @@ jobs:
       with:
         token: ${{ secrets.TOKEN }}
 
-    - name: Update tag in Helm chart
+    - name: Extract version number from GIT SHA
+      id: extract_sha
+      run: echo "BUILD_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
+    - name: Sed 
       run: |
-        BUILD_TAG=${{ env.BUILD_TAG }}
-        sed -i 's/tag: .*/tag: "'"$BUILD_TAG"'"/' app-chart/values.yaml
+        sed -i 's/tag: .*/tag: "${{ env.BUILD_TAG }}"/' app-chart/values.yaml
 
     - name: Commit and push changes
       run: |
