Update tag in Helm chart

--- a/app-chart/values.yaml
+++ b/app-chart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: docker.io/safernandez666/app
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "8e28b23"
 
 imagePullSecrets: []
 nameOverride: "app"
