--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,5 +59,5 @@ jobs:
         git config --global user.email "santiagoagustinfernandez@gmail.com"
         git config --global user.name "Santiago Fernandez"
         git add app-chart/values.yaml
-        git commit -m "Update tag in Helm chart"
+        git commit -m "Update tag '${{ env.BUILD_TAG }}'"
         git push
