--- a/k8s/manifests/ingress.yaml
+++ b/k8s/manifests/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app
+  namespace: app
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
